--- a/pom.xml
+++ b/pom.xml
@@ -26,18 +26,20 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
-        <maven.war.plugin.version>2.3</maven.war.plugin.version>
-        <maven.deploy.plugin.version>2.7</maven.deploy.plugin.version>
+        <maven.war.plugin.version>2.4</maven.war.plugin.version>
+        <maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
 
         <servlet.version>3.0.1</servlet.version>
-        <spring.version>3.2.2.RELEASE</spring.version>
+        <mongodb.version>2.11.3</mongodb.version>
+        <spring.version>3.2.4.RELEASE</spring.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
-        <postgresql.version>9.2-1002-jdbc4</postgresql.version>
-        <thymeleaf.version>2.0.16</thymeleaf.version>
-        <guava.version>12.0</guava.version>
-        <jackson.version>1.9.12</jackson.version>
-        <logback.version>1.0.12</logback.version>
-        <slf4j.version>1.6.4</slf4j.version>
+        <spring.data.mongodb.version>1.3.2.RELEASE</spring.data.mongodb.version>
+        <thymeleaf.version>2.0.19</thymeleaf.version>
+        <guava.version>15.0</guava.version>
+        <joda.time.version>2.3</joda.time.version>
+        <jackson.version>1.9.13</jackson.version>
+        <logback.version>1.0.13</logback.version>
+        <slf4j.version>1.7.5</slf4j.version>
         <junit.version>4.11</junit.version>
         <mockito.version>1.9.5</mockito.version>
     </properties>
@@ -54,7 +56,6 @@
                 <version>${maven.compiler.plugin.version}</version>
             </plugin>
 
-            <!--change maven-war-plugin configuration - so the build will not fail on missing web.xml-->
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -75,9 +76,63 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda.time.version}</version>
         </dependency>
 
         <dependency>
