--- a/tanker-batch/pom.xml
+++ b/tanker-batch/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tanker-batch</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
 
 
 </project>
