--- a/tanker-data/pom.xml
+++ b/tanker-data/pom.xml
@@ -17,19 +17,17 @@
         <dependency>
             <groupId>org.harbors</groupId>
             <artifactId>tanker-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>${mongodb.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
-            <version>${spring.data.mongodb.version}</version>
         </dependency>
 
     </dependencies>
