--- a/tanker-core/pom.xml
+++ b/tanker-core/pom.xml
@@ -4,12 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>tanker</artifactId>
-        <groupId>org.harbors</groupId>
+        <groupId>io.tanker</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tanker-core</artifactId>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <artifactId>docker-api</artifactId>
+            <groupId>io.tanker</groupId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
