--- a/tanker-web/pom.xml
+++ b/tanker-web/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>tanker</artifactId>
-        <groupId>org.harbors</groupId>
+        <groupId>io.tanker</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -15,13 +15,13 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.harbors</groupId>
+            <groupId>io.tanker</groupId>
             <artifactId>tanker-data</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.harbors</groupId>
+            <groupId>io.tanker</groupId>
             <artifactId>docker-api</artifactId>
             <version>${project.version}</version>
         </dependency>
